--- a/frontend/src/styles/RootPage.css
+++ b/frontend/src/styles/RootPage.css
@@ -8,6 +8,9 @@
     gap: 15px;
 
     overflow-y: auto;
+
+    padding-left: 10%;
+    padding-right: 10%;
 }
 
 .root-button {
